# rvip

./: .gitignore  .travis.rosinstall  .travis.yml  DEMO_README.md  DETAILED_README.md  LICENSE  README.MD  README.md  demo.md  install_opengr.sh  readme.md
rvip/: CMakeLists.txt  package.xml
rvip/include/rvip/: cuboid_generation.hpp  pose_alignment.hpp  rvip_main.h  rvip_main.hpp
rvip/launch/: run.launch
rvip/rviz/: debug_config.rviz
rvip/src/: main.cpp
rvip_roi_parser/: CMakeLists.txt  package.xml
rvip_roi_parser/msg/: ROIArray.msg
rvip_roi_parser/src/: main.cpp
