<?xml version="1.0"?>
<package format="2">
  <name>rvip</name>
  <version>0.0.1</version>
  <description>The rvip package</description>
  <author>Bey Hao Yun</author>
  <maintainer email="beyhy@artc.a-star.edu.sg">Bey Hao Yun</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>cv_bridge</depend>
  <depend>geometry_msgs</depend>
  <depend>pcl_ros</depend>
  <depend>rospy</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>image_transport</depend>
  <depend>std_msgs</depend>
  <depend>roslint</depend>
  <depend>tf</depend>
  <depend>visualization_msgs</depend>

  <test_depend>code_coverage</test_depend>
  <test_depend>roslaunch</test_depend>
  <test_depend>rostest</test_depend>

  <export>
    <rosdoc config="rosdoc.yaml" />
  </export>
</package>
