<?xml version="1.0"?>
<package format="2">
  <name>rvip</name>
  <version>0.0.1</version>
  <description>

    Easy integration of 2D-3D hybrid pose alignment processes

  </description>
  <author>Bey Hao Yun</author>
  <maintainer email="beyhy@artc.a-star.edu.sg">Bey Hao Yun</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>cv_bridge</depend>
  <depend>geometry_msgs</depend>
  <depend>image_transport</depend>
  <depend>pcl_ros</depend>
  <depend>roscpp</depend>
  <depend>roslint</depend>
  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf</depend>
  <depend>visualization_msgs</depend>
  <depend>rvip_roi_parser</depend>
  <exec_depend>rviz</exec_depend>

  <test_depend>code_coverage</test_depend>
  <test_depend>roslaunch</test_depend>
  <test_depend>rostest</test_depend>

  <export>
    <rosdoc config="rosdoc.yaml" />
  </export>
</package>
