<?xml version="1.0"?>
<package format="2">
  <name>rvip_roi_parser</name>
  <version>0.0.0</version>
  <description>
    
    Parse darknet_ros_msgs into the standardized sensor_msgs::RegionOfInterest message
  
  </description>

  <maintainer email="beyhy@artc.a-star.edu.sg">Bey Hao Yun</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>darknet_ros_msgs</depend>

</package>
